--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <style>
-      body { background-color: #fccd04};
+      body { background-color: #19181A; color: white};
     </style>
     <title>React App</title>
   </head>
