--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono|Signika&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -28,7 +29,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <style>
-      body { background-color: #19181A; color: white};
+      body { background-color: #19181A; color: white; font-family: 'Share Tech Mono';};
     </style>
     <title>React App</title>
   </head>
