--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <style>
-      body { background-color: #19181A; color: white; font-family: 'Share Tech Mono';};
+      body { background-color: #373737; color: white; font-family: 'Share Tech Mono';};
     </style>
     <title>React App</title>
   </head>
